--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
-#banner {
+html {
   font-family: Georgia, serif;
   color: #fff;
 }
 
 .btn-ghost {
   color: #fff;
-  border: 4px solid #97a49b;
+  border: 2px solid #97a49b;
 }
 
 .btn-ghost:hover {
@@ -33,14 +33,8 @@
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    background-color: none;
-    background-image: linear-gradient(to bottom, rgba(73, 85, 98, .3));
+    background-image: linear-gradient(to bottom, rgba(73, 85, 98, .1), rgba(73, 85, 98, .9));
  }
-
-  h1 {
-    margin-bottom: 0;
-  }
-
 
   p {
     margin-bottom: 0;
